Add thread number variable

--- a/redis.conf
+++ b/redis.conf
@@ -698,6 +698,8 @@ replica-lazy-flush no
 
 appendonly no
 
+threadnum 2
+
 # The name of the append only file (default: "appendonly.aof")
 
 appendfilename "appendonly.aof"
